--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar (Header) Starts -->
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-faded">
+<nav class="navbar navbar-expand-lg navbar-light bg-faded">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle d-lg-none float-left" data-toggle="collapse">
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
         </div>
-        <div class="navbar-container">
+        <!-- <div class="navbar-container">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item mr-2">
@@ -90,7 +90,7 @@
                     </li>
                 </ul>
             </div>
-        </div>
+        </div> -->
     </div>
-</nav> -->
+</nav>
 <!-- Navbar (Header) Ends -->
