--- a/src/app/dashboard/dashboard1/dashboard1.component.html
+++ b/src/app/dashboard/dashboard1/dashboard1.component.html
@@ -48,25 +48,40 @@
 </div>
 <!--Statistics cards Ends-->
 
+<!-- Bar Chart Starts -->
+<div class="row">
+	<div class="col-sm-12">
+		<div class="card">
+			<div class="card-header">
+				<h4 class="card-title">Bar Chart</h4>
+			</div>
+			<div class="card-body">
+				<div class="card-block">
+					<div id="bar-bar1" class="height-400">
+						<canvas baseChart class="chart" [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions"
+						 [colors]="barChartColors" [legend]="barChartLegend" [chartType]="barChartType" (chartHover)="chartHovered($event)"
+						 (chartClick)="chartClicked($event)"></canvas>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+<!-- Bar Chart Ends -->
+
 <!--Line with Area Chart 1 Starts-->
 <div class="row">
 	<div class="col-sm-12">
 		<div class="card">
 			<div class="card-header">
-				<h4 class="card-title">Estatísticas de consumo</h4>
+				<h4 class="card-title">Line Chart</h4>
 			</div>
 			<div class="card-body">
 				<div class="card-block">
-					<div class="chart-info mb-3 ml-3">
-						<span class="gradient-blackberry d-inline-block rounded-circle mr-1" style="width:15px; height:15px;"></span>
-						Diário
-						<span class="gradient-mint d-inline-block rounded-circle mr-1 ml-2" style="width:15px; height:15px;"></span>
-						Mensal
-					</div>
-					<div id="line-area" class="height-350 lineArea">
-						<x-chartist [data]="lineArea.data" [type]="lineArea.type" [options]="lineArea.options" [responsiveOptions]="lineArea.responsiveOptions"
-						 [events]="lineArea.events">
-						</x-chartist>
+					<div class="height-400">
+						<canvas height="400" baseChart class="chart" [datasets]="lineChartData" [labels]="lineChartLabels" [options]="lineChartOptions"
+						 [colors]="lineChartColors" [legend]="lineChartLegend" [chartType]="lineChartType" (chartHover)="chartHovered($event)"
+						 (chartClick)="chartClicked($event)"></canvas>
 					</div>
 				</div>
 			</div>
@@ -112,78 +127,4 @@
 			</div>
 		</div>
 	</div>
-</div>
-
-
-<div class="row" matchHeight="card">
-	<div class="col-xl-6 col-lg-12 col-12">
-		<div class="card">
-			<div class="card-header">
-				<h4 class="card-title">Estatísticas</h4>
-			</div>
-			<div class="card-body">
-
-				<p class="font-medium-2 text-muted text-center pb-2">Consumo anual</p>
-				<div id="Stack-bar-chart" class="height-300 Stackbarchart mb-2">
-					<x-chartist class="" [data]="Stackbarchart.data" [type]="Stackbarchart.type" [options]="Stackbarchart.options"
-					 [responsiveOptions]="Stackbarchart.responsiveOptions" [events]="Stackbarchart.events">
-					</x-chartist>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="col-xl-6 col-lg-12">
-		<div class="card">
-			<div class="card-header">
-				<h4 class="card-title">Consumo por eletro-eletrônico</h4>
-			</div>
-			<div class="card-body">
-
-				<p class="font-medium-2 text-muted text-center">Consumo mensal</p>
-				<div id="donut-dashboard-chart" class="height-250 donut">
-					<x-chartist class="" [data]="DonutChart.data" [type]="DonutChart.type" [options]="DonutChart.options"
-					 [responsiveOptions]="DonutChart.responsiveOptions" [events]="DonutChart.events">
-					</x-chartist>
-				</div>
-
-				<div class="card-block">
-					<div class="row mb-3">
-						<div class="col">
-							<span class="mb-1 text-muted d-block">23% - Ar-Condicionado</span>
-							<div class="progress" style="height: 5px;">
-								<div class="progress-bar bg-success" role="progressbar" style="width: 23%;" aria-valuenow="23" aria-valuemin="0"
-								 aria-valuemax="100"></div>
-							</div>
-						</div>
-						<div class="col">
-							<span class="mb-1 text-muted d-block">14% - Geladeira</span>
-							<div class="progress" style="height: 5px;">
-								<div class="progress-bar bg-amber" role="progressbar" style="width: 14%;" aria-valuenow="14" aria-valuemin="0"
-								 aria-valuemax="100"></div>
-							</div>
-						</div>
-					</div>
-					<div class="row mb-2">
-						<div class="col">
-							<span class="mb-1 text-muted d-block">35% - Tv</span>
-							<div class="progress" style="height: 5px;">
-								<div class="progress-bar bg-deep-purple bg-lighten-1" role="progressbar" style="width: 35%;" aria-valuenow="35"
-								 aria-valuemin="0" aria-valuemax="100"></div>
-							</div>
-						</div>
-						<div class="col">
-							<span class="mb-1 text-muted d-block">28% - Computador</span>
-							<div class="progress" style="height: 5px;">
-								<div class="progress-bar bg-blue" role="progressbar" style="width: 28%;" aria-valuenow="28" aria-valuemin="0"
-								 aria-valuemax="100"></div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-
 </div>
